--- a/package.json
+++ b/package.json
@@ -6,21 +6,25 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
-    "pro": "NODE_ENV=production nodemon server.js"
+    "pro": "NODE_ENV=production nodemon server.js",
+    "debug": "node --inspect server.js"
   },
   "author": "Rohit",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.21",
     "prettier": "^2.8.4",
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "validator": "^13.9.0"
   }
 }
