--- a/.env
+++ b/.env
@@ -4,4 +4,10 @@ DATABASE_LOCAL = mongodb://localhost:27017/tourapp
 
 JWT_SECRET=S[q9xK[h2,7qSZnRxA[<zK~J?s$;HC.&Z2;-@B<uJ>?kgB&F;%=Z/;tpR5$bhrySA{a6ZsNK_NYur~">;PEFQ{F3Y4_yy&U&hJKE'L@+:226YFSkdDN4xH,Y;}CVsKmU
 
-JWT_EXPIRES_IN=30
+JWT_EXPIRES_IN=30d
+COOKIE_EXPIRES_IN=30
+
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USERNAME=5ec88d76ba900c
+EMAIL_PASSWORD=00fb894530a1f7
