--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=2525
 EMAIL_USERNAME=5ec88d76ba900c
 EMAIL_PASSWORD=00fb894530a1f7
+
+EMAIL_FROM = rohitwebdev007@gmail.com
