--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
+    "html-to-text": "^9.0.4",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
     "prettier": "^2.8.4",
+    "sharp": "^0.31.3",
     "slugify": "^1.6.5",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
